--- a/assets/index.html
+++ b/assets/index.html
@@ -12,12 +12,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css">
   <link rel="stylesheet" href="/css/index.css">
   <!-- <script src="https://unpkg.com/showdown@1.8.7/dist/showdown.min.js"></script> -->
-  <script src="https://unpkg.com/rilti@0.9.5/dist/rilti.min.js"></script>
+  <script src="https://unpkg.com/rilti@0.9.9/dist/rilti.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/dayjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/plugin/relativeTime.js"></script>
   <script>(dayjs.extend(dayjs_plugin_relativeTime))</script>
   <script src="https://unpkg.com/simple-msgpack@0.0.3/msgpack.min.js"></script>
-  <script src="/js/haal.min.js"></script>
+  <script src="https://unpkg.com/rilti@0.9.9/plugins/haal.min.js"></script>
   <!-- script src="/js/router.min.js"></script -->
 </head>
 
