--- a/assets/admin.html
+++ b/assets/admin.html
@@ -13,10 +13,12 @@
   <link rel="stylesheet" href="/css/admin.css">
   <script src="https://unpkg.com/simple-msgpack@0.0.3/msgpack.min.js"></script>
   <script src="/js/haal.min.js"></script>
-  <script src="https://unpkg.com/rilti@0.9.5/dist/rilti.min.js"></script>
+  <script src="https://unpkg.com/rilti@0.9.9/dist/rilti.min.js"></script>
   <script src="https://unpkg.com/showdown@1.8.7/dist/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/dayjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/plugin/relativeTime.js"></script>
+  <script src="https://unpkg.com/simple-msgpack@0.0.3/msgpack.min.js"></script>
+  <script src="https://unpkg.com/rilti@0.9.9/plugins/haal.min.js"></script>
   <script>
 (dayjs.extend(dayjs_plugin_relativeTime))
 const icon = (i, ops = {}) => rilti.dom.i(ops, el => {
