--- a/assets/index.html
+++ b/assets/index.html
@@ -6,9 +6,10 @@
   <meta name="author" content="Saul van der Walt">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>grimstack, it's something else</title>
+  <link rel="preload" href="/js/index.js" as="script">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-  <link href="https://unpkg.com/ionicons@4.4.6/dist/css/ionicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/ionicons@4.4.6/dist/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css">
   <link rel="stylesheet" href="/css/index.css">
   <!-- <script src="https://unpkg.com/showdown@1.8.7/dist/showdown.min.js"></script> -->
@@ -16,7 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/dayjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/plugin/relativeTime.js"></script>
   <script>(dayjs.extend(dayjs_plugin_relativeTime))</script>
-  <script src="https://unpkg.com/simple-msgpack@0.0.3/msgpack.min.js"></script>
+  <script src="https://unpkg.com/simple-msgpack@0.0.5/msgpack.min.js"></script>
   <script src="https://unpkg.com/rilti@0.9.9/plugins/haal.min.js"></script>
   <!-- script src="/js/router.min.js"></script -->
 </head>
@@ -27,7 +28,7 @@
     <h1>grimstack</h1>
   </header>
   <main></main>
-  <script src="/js/index.js" async></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
