update deps, simplified routes

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Saul van der Walt">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="writs and ideas for all and none">
+  <meta name="google-site-verification" content="L25xIEzKFzTd_-2HdDo8q2xtsDLX4_IgelBJG716j58">
   <title>grimstack, it's something else</title>
+  <link rel="icon" href="/favicon.png" type="image/png">
   <link rel="preload" href="/js/index.js" as="script">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
@@ -19,9 +21,7 @@
   <script>(dayjs.extend(dayjs_plugin_relativeTime))</script>
   <script src="https://unpkg.com/simple-msgpack@0.0.5/msgpack.min.js"></script>
   <script src="https://unpkg.com/rilti@0.9.9/plugins/haal.min.js"></script>
-  <!-- script src="/js/router.min.js"></script -->
 </head>
-
 <body>
   <header class="hero">
     <div class="auth"></div>
@@ -30,5 +30,4 @@
   <main></main>
   <script src="/js/index.js"></script>
 </body>
-
 </html>
