--- a/assets/admin.html
+++ b/assets/admin.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Saul van der Walt">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Saul's personal site</title>
+  <link rel="icon" href="/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
   <link href="https://unpkg.com/eva-icons@1.0.2/style/eva-icons.css" rel="stylesheet">
