--- a/assets/index.html
+++ b/assets/index.html
@@ -8,17 +8,16 @@
   <meta name="google-site-verification" content="L25xIEzKFzTd_-2HdDo8q2xtsDLX4_IgelBJG716j58">
   <title>grimstack, it's something else</title>
   <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="preload" href="/js/ensure-index-deps.js" as="script">
   <link rel="preload" href="/js/index.js" as="script">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,700">
   <link rel="stylesheet" href="https://unpkg.com/ionicons@4.4.6/dist/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css">
   <link rel="stylesheet" href="/css/index.css">
-  <!-- <script src="https://unpkg.com/showdown@1.8.7/dist/showdown.min.js"></script> -->
   <script src="https://unpkg.com/rilti@0.9.9/dist/rilti.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/dayjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.7.7/plugin/relativeTime.js"></script>
-  <script>(dayjs.extend(dayjs_plugin_relativeTime))</script>
   <script src="https://unpkg.com/simple-msgpack@0.0.5/msgpack.min.js"></script>
   <script src="https://unpkg.com/rilti@0.9.9/plugins/haal.min.js"></script>
 </head>
@@ -28,6 +27,7 @@
     <h1>grimstack</h1>
   </header>
   <main></main>
+  <script src="/js/ensure-index-deps.js"></script>
   <script src="/js/index.js"></script>
 </body>
 </html>
