--- a/assets/admin.html
+++ b/assets/admin.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-  <link href="https://unpkg.com/eva-icons@1.0.2/style/eva-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/eva-icons@1.0.2/style/eva-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css">
   <link rel="stylesheet" href="/css/admin.css">
   <script src="https://unpkg.com/simple-msgpack@0.0.3/msgpack.min.js"></script>
